# codebase3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  anim.txt
.github/workflows/: build.yml  cmake.yml
incl/: gameengine.h
incl/common/: Mat44.h  Vec3.h
incl/game/: Component.h  Entity.h  main.cpp
incl/render/: Renderer.h
incl/render/impl/ogl/: RendererOGL.h
incl/render/impl/vkn/: RendererVKN.h
models/backpack/: backpack.obj:Zone.Identifier
models/fox/: fox.dae  fox.gltf
models/koume/: koume.fbx
models/toon-cat-free/: model.glb  model.gltf
src/: CMakeLists.txt  main.cpp
src/common/: Config.h  Float.cpp  Float.h  Mat44.cpp  Mat44.h  Quaternion.cpp  Quaternion.h  Vec3.cpp  Vec3.h
src/game/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  System.h  main.cpp
src/game/component/: Component.h  Mesh.cpp  Mesh.h
src/game/entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h
src/game/event/: Event.h  Manager.cpp  Manager.h
src/render/: Renderer.h  RendererOGL.cpp  RendererOGL.h  RendererVKN.h
src/render/impl/ogl/: RendererOGL.cpp  RendererOGL.h
src/render/impl/vkn/: RendererVKN.h
tool/: build.sh  install_dependancies.sh
